[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Semi-Coder-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/monologSystem.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="monologSystem" type="Spatial"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.74008
margin_top = -6.51985
margin_right = 3.74011
margin_bottom = -6.51984
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -332.0
margin_top = -207.0
margin_right = 332.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.984314, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_show" type="Timer" parent="."]
one_shot = true

[node name="can_see" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="text_show" to="." method="_on_text_show_timeout"]
[connection signal="timeout" from="can_see" to="." method="_on_can_see_timeout"]
